--- a/src/search/index1.njk
+++ b/src/search/index1.njk
@@ -5,7 +5,7 @@ permalink: /search/index1.json
 {%- for page in collections.pages -%}
 {
 "url": "{{ page.url }}",
-"content": "{{ page.templateContent | escape | safe }}"
+"content": "{{ page.templateContent | safe }}"
 }
 {% if loop.last == false %},{% endif %}{% endfor -%} 
 ]
